# redbricks-server

./: .dockerignore  .gitignore  README.md  app.py  pyproject.toml  task-definition.json
.github/workflows/: aws.yml  pythonpackage.yml
dockerfiles/: production.dockerfile
redbricksapp/: config.py  entry.py  error.py  handler.py
redbricksapp/controllers/: __init__.py  artist.py  base.py  event.py  location.py  testt.py
redbricksapp/models/: model.py
redbricksapp/modules/: database.py  encoder.py  mapper.py  mutation.py  pagination.py  serializable.py
schemas/: rb_schema.sql
scripts/: export_firebase.py
