[tool.poetry]
name = "redbricks-server"
version = "0.1.0"
description = ""
authors = ["soo <soo@ecdsa.io>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
simplejson = "^3.17.0"
cachelib = "^0.1"
flask_cors = "^3.0.8"
sqlalchemy = "^1.3.17"
boto3 = "^1.13.16"
pymysql = "^0.9.3"
pyhumps = "^1.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
